# clipssh

./: .gitignore  BUILDING  Makefile.in  README.md  configure.ac  configure~
generic/: clipsh.c~  clipssh.c
macosx/: pasteboard.c  pasteboard.m
tclconfig/: tcl.m4
unix/: tkglGLX.c  tkglPlatform.h
win/: colormap.c  colormap.h  makefile.vc  rules.vc  tkglPlatform.h  tkglUuid.h.in  tkglWGL.c
